# cooperative-memory-management

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
backend/prototype/core/: column_base.hpp  db.cpp  db.hpp  types.cpp  types.hpp  units.hpp
backend/prototype/execution/: aggregation.cpp  aggregation.hpp  batch.cpp  batch.hpp  csv_import_pipeline.hpp  index_scan.hpp  index_update.hpp  join.cpp  join.hpp  operator.cpp  operator.hpp  paged_vector_iterator.hpp  pipeline.cpp  pipeline.hpp  pipeline_breaker.cpp  pipeline_breaker.hpp  pipeline_job.cpp  pipeline_job.hpp  pipeline_starter.cpp  pipeline_starter.hpp  qep.cpp  qep.hpp  scan.hpp  sort.cpp  sort.hpp  table_column.hpp  temporary_column.cpp  temporary_column.hpp  typed_column.cpp  typed_column.hpp  unencoded_column_value_printer.cpp  unencoded_column_value_printer.hpp
backend/prototype/scheduling/: dispatcher.cpp  dispatcher.hpp  execution_context.hpp  job.hpp  job_manager.cpp  job_manager.hpp
backend/prototype/storage/: guard.hpp  page.hpp  vmcache.cpp  vmcache.hpp
backend/prototype/storage/persistence/: btree.hpp  column.hpp  root.hpp  table.hpp
backend/prototype/storage/policy/: basic_partitioning_strategy.cpp  basic_partitioning_strategy.hpp  cache_partition.hpp  cache_trace.hpp  data_temp_partitioning_strategy.cpp  data_temp_partitioning_strategy.hpp  partitioning_strategy.hpp
backend/prototype/utils/: CSV.hpp  MurmurHash3.cpp  MurmurHash3.hpp  crtp.hpp  errno.cpp  errno.hpp  hashset.hpp  memcpy.hpp  print_result.cpp  print_result.hpp  stringify.hpp  validation.cpp  validation.hpp
frontend/: CMakeLists.txt
frontend/tpcch/: main.cpp  schema.hpp  tpcch.cpp  tpcch.hpp  transactions.cpp  transactions.hpp
frontend/tpcch/execution/: customer_select_index_scan.hpp  os_customer_select_index_scan.hpp  os_order_select_index_scan.hpp  q06_agg.hpp  q06_scan.hpp  q09_agg.hpp  q09_item_scan.hpp  q09_order_scan.hpp  q09_stock_scan.hpp  sl_stock_select_index_scan.hpp
frontend/tpch/: main.cpp  queries.cpp  queries.hpp  schema.hpp
frontend/tpch/execution/: q06_agg.hpp  q06_scan.hpp  q09_agg.hpp  q09_scan.hpp
libs/: jemalloc.cmake
scripts/: ExperimentConfiguration.py  analysis.py  cache_trace.py  ch-benchmark-dbgen.sh  ch-benchmark-patch.sh  config.sh  experiments.sh  llog.py  parameters.py  rerun_experiment.py  run_experiments.py  runner.py  scalability.py  stats.py  trad_coop.py  working_set.py
test/: CMakeLists.txt
test/backend/: CMakeLists.txt
test/backend/prototype/core/: db.cpp  db_test.cpp  db_test.hpp  types.cpp
test/backend/prototype/execution/: aggregation.cpp  index_scan.cpp  join.cpp  scan.cpp  sort.cpp
test/backend/prototype/storage/: vmcache.cpp
test/backend/prototype/storage/persistence/: btree.cpp
test/backend/prototype/utils/: CSV.cpp  hashset.cpp
test/frontend/: CMakeLists.txt
test/frontend/tpcch/: tpcch_test.cpp  tpcch_test.hpp  transactions.cpp
test/shared/: db_test.cpp  db_test.hpp
